WebApiExRateProvider refactoring
handle UnCheckedException